<resources>
    <string name="app_name">Shortcut Magic</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">My Shortcuts</string>
    <string name="second_fragment_label">Create Shortcut</string>
    <string name="shortcut_name_hint">Shortcut Name</string>
    <string name="shortcut_type_url">Web URL</string>
    <string name="shortcut_type_file">File</string>
    <string name="shortcut_type_app">App</string>
    <string name="url_hint">https://example.com</string>
    <string name="btn_pick_app">Pick App</string>
    <string name="btn_pick_file">Pick File</string>
    <string name="btn_pick_icon">Pick Icon</string>
    <string name="btn_create">Create Shortcut</string>
    <string name="msg_shortcut_created">Shortcut created!</string>
    <string name="error_empty_name">Please enter a name</string>
    <string name="error_invalid_url">Please enter a valid URL</string>
    <string name="welcome_message">Create fast shortcuts to your favorite Apps, Files or URLs right on your home screen.</string>
    <string name="tap_to_start">Tap the + button to start</string>
    <string name="icon_preview_desc">Icon Preview</string>
    <string name="label_shortcut_type">Shortcut Type</string>
    <string name="action_about">About</string>
    <string name="action_clear_all">Clear All History</string>
    <string name="action_contact">Contact Developer</string>
    <string name="action_github">Project GitHub</string>
    <string name="msg_history_cleared">History cleared</string>
    <string name="action_delete_selected">Delete Selected</string>
    <string name="msg_deleted_count">%d items deleted</string>
</resources>