<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shortcutmagic.MainActivity">
    <item
        android:id="@+id/action_clear_all"
        android:orderInCategory="90"
        android:title="@string/action_clear_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="95"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_github"
        android:orderInCategory="97"
        android:title="@string/action_github"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>